@@ -1007,6 +1007,7 @@ unsigned int cmd_parse_dec(char** text)
 #define CMD_TITLE		9
 #define CMD_HELP		10
 #define CMD_WINTITLE		11
+#define CMD_FULLSCREEN		12
 #define HELP_BASIC		128
 #define HELP_HOST		129
 #define HELP_MOS		130
@@ -1050,7 +1051,26 @@ void cmd_cat(char *command) {
 void cmd_wintitle(char *command) {
 #ifdef USE_SDL
   while (*command == ' ') command++;	// Skip spaces
-  set_wintitle(command);
+  if (strlen(command) == 0) {
+    emulate_printf("Syntax: WinTitle <window title>\r\n");
+  } else {
+    set_wintitle(command);
+  }
+#endif
+  return;
+}
+
+void cmd_fullscreen(char *command) {
+#ifdef USE_SDL
+  int flag=3;
+  while (*command == ' ') command++;	// Skip spaces
+  if (strlen(command) == 0) flag=2;
+  if (strcmp(command, "1" ) == 0) flag=1;
+  if (strcmp(command, "0" ) == 0) flag=0;
+  if (strcmp(command, "on" ) == 0) flag=1;
+  if (strcmp(command, "off" ) == 0) flag=0;
+  if (flag != 3) fullscreenmode(flag);
+  else emulate_printf("Syntax: FullScreen [<ON|OFF|1|0>]\r\nWith no parameter, this command toggles the current setting.\r\n");
 #endif
   return;
 }
@@ -1126,7 +1146,8 @@ void cmd_help(char *command)
 	}
 	if (cmd == HELP_HOST || cmd == HELP_MOS) {
 		emulate_printf("  CD   <dir>\n\r  FX   <num>(,<num>(,<num>))\n\r");
-		emulate_printf("  KEY  <num> <string>\n\r  HELP <text>\n\r  QUIT\n\r");
+		emulate_printf("  KEY  <num> <string>\n\r  HELP <text>\n\r  QUIT\n\r\n\r");
+		emulate_printf("  WinTitle   <window title>\r\n  FullScreen [<ON|OFF|1|0>]\n\r");
 //		emulate_printf("  VER\n\r");
 	}
 	if (*command == '.')
@@ -1196,6 +1217,7 @@ int check_command(char *text) {
   if (strcmp(command, "help")   == 0) return CMD_HELP;
   if (strcmp(command, "ver")    == 0) return CMD_VER;
   if (strcmp(command, "wintitle") == 0) return CMD_WINTITLE;
+  if (strcmp(command, "fullscreen") == 0) return CMD_FULLSCREEN;
   if (strcmp(command, "basic")  == 0) return HELP_BASIC;
   if (strcmp(command, "host")   == 0) return HELP_HOST;
   if (strcmp(command, "mos")    == 0) return HELP_MOS;
@@ -1245,6 +1267,7 @@ void mos_oscli(char *command, char *respfile) {
   if (cmd == CMD_FX)   { cmd_fx(cmdbuf+2); return; }
 //if (cmd == CMD_VER)  { cmd_ver(); return; }
   if (cmd == CMD_WINTITLE) {cmd_wintitle(cmdbuf+8); return; }
+  if (cmd == CMD_FULLSCREEN) {cmd_fullscreen(cmdbuf+10); return; }
   }
 
   if (*cmdbuf == '/') {		/* Run file, so just pass to OS     */
